# CTUAV-GCA

./: qgcimages.qrc  qgcresources.qrc  qgroundcontrol.qrc
.github/workflows/: android-linux.yml  android-windows.yml  linux.yml  pre-commit.yml  windows.yml
custom/src/: FlyViewCustomLayer.qml
resources/parameters/: Quad_N1.params
src/: CMakeLists.txt  QGCApplication.cc
src/AnalyzeView/: AnalyzeView.qml
src/Android/: AndroidSerial.cc
src/AutoPilotPlugins/APM/: APMSensorsComponent.qml
src/AutoPilotPlugins/PX4/: PX4SimpleFlightModes.qml  SafetyComponent.qml
src/Camera/: VehicleCameraControl.cc
src/Comms/: USBBoardInfo.json
src/DroneDataLoader/: CMakeLists.txt  DroneDataLoader.DroneData.json  DroneDataLoader.cc  DroneDataLoader.h
src/DroneList/: CMakeLists.txt  DroneList.qml
src/FirmwarePlugin/: FirmwarePlugin.cc
src/FirmwarePlugin/PX4/: PX4FirmwarePlugin.cc  PX4FirmwarePlugin.h
src/FlightDisplay/: FlyView.qml  FlyViewWidgetLayer.qml
src/FlightMap/: FlightMap.qml
src/FlightMap/MapItems/: QGCMapPolygonVisuals.qml
src/FlightMap/Widgets/: PhotoVideoControl.qml
src/Gimbal/: GimbalController.cc
src/QmlControls/: FileButton.qml  FlyViewToolBar.qml  MAVLinkMessageButton.qml  MainStatusIndicator.qml  ParameterEditor.qml  ParameterEditorController.cc  PipView.qml  PlanView.qml  QGCFileDialog.qml  QGCTabBar.qml  QGCTabButton.qml  ToolStrip.qml
src/UI/: MainWindow.qml
src/UI/AppSettings/: HelpSettings.qml  PX4LogTransferSettings.qml  SettingsPagesModel.qml
src/Vehicle/: StandardModes.cc
translations/: qgc_source_vi_VN.ts
(+2 files in other folders)
